# Rlanet-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  PlanetRenderer  README.md  moc_mainwindow.cpp
cmake/modules/: FindCEGUI.cmake
doc/: Makefile  proposal.tex
glsl/: billboard.frag  billboard.vert  grass.frag  grass.geom  grass.vert  noise.glsl  ocean.frag  ocean.geom  ocean.vert  red.frag  regular.frag  regular.vert  skydome.frag  skydome.vert  sphere.vert  terrain.frag  terrain.geom  terrain.vert  torus.vert  tree.geom
qml/: MainWindow.qml
report/: Makefile  mybib.bib  report.tex
src/: main.cc  main.cpp  main.moc_parameters
src/gui/: MainWindow.h  MainWindow.moc  MainWindow.moc_parameters  Window.h
src/planet/: Planet.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  Terrain.h
src/quick/: Bar.qml  Mangekyou.cc  Mangekyou.h  Popup.qml  RenderThread.cc  RenderThread.h  RoundButton.qml  SelectGL.h  TextureNode.h  main.qml  nexus.h  quick.qrc
src/scene/: '  Billboard.cc  Billboard.h  Biomes.h  BoundingBox.h  CONCEPTS  Camera.cc  Camera.h  Geo.h  Grass.cc  Grass.h  HTileSys.cc  HTileSys.h  Light.h  Light.h.bak  MacroTile.h  Noise.h  NoiseGenerator.cc  NoiseGenerator.h  Ocean.cc  Ocean.h  Scene.cc  Scene.h  SceneObject.cc  SceneObject.h  Solar.cc  Solar.h  SubTile.h  Terrain.cc  Terrain.h  TextureSkyDome.cc  TextureSkyDome.h  Tile.h  TileBlitter.h  TileIO.h  TileInfo.h  Tree.cc  Tree.h  Vec2D.h  Wind.cc  (+3 more)
src/test/: test_noise.cc  test_tile.cc
src/ui/: glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  moc_glwidget.cpp_parameters  moc_mainwindow.cpp_parameters  moc_moc_mainwindow.cpp_parameters  moc_moc_moc_mainwindow.cpp_parameters
src/ui_forms/: mainwindow.ui
src/utils/: Application.cc  Application.h  BoundingBox.h  Camera.cpp  Camera.h  GraphicsDevice.cc  GraphicsDevice.h  Light.cpp  Mangekyou.cc  Mangekyou.h  Planet.h  RenderManager.cc  RenderManager.h  RenderThread.cc  RenderThread.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  SelectGL.h  Terrain.cpp  Terrain.h  TextureNode.cc  TextureNode.h  nexus.cc  nexus.h  noiseutils.h
textures/billboard/: grass.jpg.bak
